# qmmm_controller

./: .gitignore  CMakeLists.txt
lammps/src/USER-MISC/: driver.cpp  driver.h  fix_driver.cpp  fix_driver.h  fix_ipi.cpp  server.cpp  server.h
lib/: qmmm_aux.c  qmmm_aux.cpp  qmmm_aux.h  sockets.c  sockets.cpp  sockets.h
lib_lammps/: libqmmm.h  messages.c  messages.h  pwqmmm.c  sockets.c  sockets.h
qe/Modules/: Makefile  fmessages.f90  fsockets.f90  messages.c  messages.h  qmmm.f90  sockets.c
qe/PW/src/: pwscf.f90  run_driver.f90
qe/clib/: sockets.c
src/: CMakeLists.txt  main.cpp  main.f90  main.h  messages.c  messages.cpp  messages.h  mm.cpp  mm.h  qmmm.cpp  qmmm.h
src_client/: CMakeLists.txt  client.f90  messages.c  messages.cpp  messages.h
src_lammps/: fix_qmmm.cpp  fix_qmmm.h  messages.cpp  messages.h  sockets.cpp
